--- a/client/package.json
+++ b/client/package.json
@@ -24,8 +24,10 @@
     "react": "^18.3.1",
     "react-dom": "^18.3.1",
     "react-hook-form": "^7.52.1",
+    "react-icons": "^5.2.1",
     "react-router-dom": "^6.24.1",
     "recharts": "^2.12.7",
+    "rsuite": "^5.68.1",
     "tailwind-merge": "^2.4.0",
     "tailwindcss-animate": "^1.0.7",
     "zod": "^3.23.8"
